--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 <div class="col-md-8 mt-4 mx-auto text-center">
 
                     <h1 class="g-2">Partners</h1>
-                    <p class="text-dark mt-4">I have partnered with Natkel Constructions their website and work together</p>
+                    <p class="text-dark mt-4">I have partnered with Natkel Constructions to develop their website and work together on future projects</p>
                     <img src="Natkel 2.jpg" alt="Paris" class="center">
                 </div>
 
